--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Beer list - Tradir Assignment</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
